docs: update SESSION_SNAPSHOT.md — R2 complete, all milestones current